[gd_scene load_steps=27 format=2]

[ext_resource path="res://Health.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemyHealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/BigCrab_idle_08.png" type="Texture" id=3]
[ext_resource path="res://Boss2.gd" type="Script" id=4]
[ext_resource path="res://assets/BigCrab_idle_01.png" type="Texture" id=5]
[ext_resource path="res://assets/BigCrab_idle_09.png" type="Texture" id=6]
[ext_resource path="res://assets/BigCrab_idle_04.png" type="Texture" id=7]
[ext_resource path="res://assets/BigCrab_idle_12.png" type="Texture" id=8]
[ext_resource path="res://assets/BigCrab_idle_11.png" type="Texture" id=9]
[ext_resource path="res://assets/BigCrab_idle_07.png" type="Texture" id=10]
[ext_resource path="res://assets/BigCrab_idle_10.png" type="Texture" id=11]
[ext_resource path="res://assets/BigCrab_idle_13.png" type="Texture" id=12]
[ext_resource path="res://assets/BigCrab_idle_14.png" type="Texture" id=13]
[ext_resource path="res://assets/BigCrab_idle_15.png" type="Texture" id=14]
[ext_resource path="res://assets/BigCrab_idle_06.png" type="Texture" id=15]
[ext_resource path="res://assets/BigCrab_idle_05.png" type="Texture" id=16]
[ext_resource path="res://assets/BigCrab_idle_16.png" type="Texture" id=17]
[ext_resource path="res://assets/BigCrab_idle_17.png" type="Texture" id=18]
[ext_resource path="res://assets/BigCrab_idle_18.png" type="Texture" id=19]
[ext_resource path="res://assets/BigCrab_idle_02.png" type="Texture" id=20]
[ext_resource path="res://assets/BigCrab_idle_03.png" type="Texture" id=21]
[ext_resource path="res://assets/BigCrab_idle_00.png" type="Texture" id=22]
[ext_resource path="res://assets/BigCrab_idle_19.png" type="Texture" id=23]
[ext_resource path="res://assets/BigCrab_idle_20.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 154.037, 231.625 )

[node name="Boss2" type="Area2D"]
collision_layer = 0
collision_mask = 257
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -20.0226, -4.00455 )
frames = SubResource( 1 )
animation = "Idle"

[node name="EnemyHitBox" type="CollisionShape2D" parent="."]
position = Vector2( -28.0616, 22.4492 )
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = -197.367
margin_top = -292.265
margin_right = 120.633
margin_bottom = -251.265

[node name="Health" parent="." instance=ExtResource( 1 )]
max_amount = 1800
[connection signal="area_entered" from="." to="." method="_on_Boss2_area_entered"]
[connection signal="depleted" from="Health" to="." method="_on_Health_depleted"]
